# rust-actix-webrtc-messenger

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: constants.rs  database.rs  error.rs  main.rs
src/services/: mod.rs
src/services/message/: handlers.rs  model.rs
src/services/room/: handlers.rs  mod.rs  model.rs
src/services/session/: model.rs
src/services/user/: model.rs
src/utils/: macros.rs  mod.rs  snowflake_generator.rs
src/web_rtc/: actor.rs  connection.rs  mod.rs
src/web_rtc/message/: mod.rs  payload.rs
src/web_socket/: actor.rs  connection.rs  mod.rs  routes.rs
src/web_socket/message/: mod.rs  payload.rs
static/: index.html
static/scripts/: index.js  main.js
static/styles/: index.less  main.less
