[package]
name = "actix-webrtc-messenger"
version = "0.1.0"
authors = ["Ivan <contact@mixero.dev>"]
edition = "2021"
description = "Messenger example with Actix and WebRTC"
readme = "README.md"
homepage = "https://github.com/Mixerou/rust-actix-webrtc-messenger"
repository = "https://github.com/Mixerou/rust-actix-webrtc-messenger"
license = "MIT"

[dependencies]
actix = { version = "0.13.3" }
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
bytes = "1.5.0"
dotenv = "0.15.0"
educe = { version = "0.5.11", default-features = false, features = ["Debug"] }
env_logger = "0.11.2"
lazy_static = "1.4.0"
log = "0.4.21"
nanoid = "0.4.0"
paste = "1.0.14"
persy = "1.4.7"
rmp-serde = "1.1.2"
rmpv = { version = "1.0.1", features = ["with-serde"] }
rs-snowflake = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_repr = "0.1.18"
structsy = { version = "0.5.2", features = ["derive"] }
webrtc = "0.10.1"
